# cgq

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  main.py  question.py  quiz.py  quiz_manager.py  ui-config.toml
.cargo/: config.toml
doc/: card-reference.md  editor-spec.md  planning.md  technical-spec.md
examples/: effect_demo.rs  twitch_chat_test.rs
examples/sample-quiz/: README.md  cards.yml  questions.yml
src/: card_3d.rs  cards.rs  chat.rs  chat_plugin.rs  collections.rs  components.rs  constants.rs  effect.rs  effect_executor.rs  effect_executor_tests.rs  game_state.rs  lib.rs  main.rs  resources.rs  systems.rs  twitch.rs  ui_config.rs
src/card_3d/: components.rs  mesh.rs  mod.rs  systems.rs  texture.rs
src/effect_executor/: collection_ops.rs  control_flow.rs  event_ops.rs  flag_ops.rs  mod.rs  value_ops.rs  variable_ops.rs
src/ui/: cards_ui.rs  game_ui.rs  mod.rs  screens.rs
web/: index.html
