[package]
name = "cgq"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["fs"] }
clap = { version = "4.5", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
