[package]
name = "cgq"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["wayland"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["fs", "net", "io-util", "rt", "rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
textwrap = "0.16"

[dev-dependencies]
env_logger = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
