[package]
name = "cgq"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
rand = "0.8"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
textwrap = "0.16"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.14.2", features = ["wayland"] }
tokio = { version = "1.0", features = ["fs", "net", "io-util", "rt", "rt-multi-thread", "macros", "sync"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
env_logger = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# WASM release profile for smaller binaries
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
